update sample env

--- a/sample.env
+++ b/sample.env
@@ -1,7 +1,12 @@
-PORT=5000
-MONGO_URL=mongodb://localhost:27017/onion
-DB_NAME=onion
+HOST_NAME=127.0.0.1
+PORT=8000
+
+MONGO_URL=mongodb://localhost:27017
+MONGO_SRV_URL=mongodb+srv://<username>:<password>@payrollcluster.o7suv2i.mongodb.net/
+DB_NAME=sample_db
+
 
 REDIS_HOST=127.0.0.1
 REDIS_PORT=6379
-REDIS_EXPIRY_TIME=86400
+REDIS_EXPIRY_TIME=3600 # 1Hr
+REDIS_AUTH_KEY=sample_auth_key
