upload single image with stream

--- a/sample.env
+++ b/sample.env
@@ -5,8 +5,11 @@ MONGO_URL=mongodb://localhost:27017
 MONGO_SRV_URL=mongodb+srv://<username>:<password>@payrollcluster.o7suv2i.mongodb.net/
 DB_NAME=sample_db
 
-
 REDIS_HOST=127.0.0.1
 REDIS_PORT=6379
 REDIS_EXPIRY_TIME=3600 # 1Hr
 REDIS_AUTH_KEY=sample_auth_key
+
+CLOUDINARY_CLOUD_NAME=---
+CLOUDINARY_API_KEY=---
+CLOUDINARY_API_SECRET=---
